# flask-ckeditor

./: README.md  pyproject.toml
flask-ckeditor/: __init__.py
flask-ckeditor/templates/: config_target.jinja
flask_ckeditor/: __init__.py  fields.py
flask_ckeditor/templates/: config_target.jinja  load_ckeditor.jinja
