[tool.poetry]
name = "flask-ckeditor-manager"
version = "0.1.32"
description = "A simple interface to use CKEditor5 with Flask"
authors = ["Sebastian Salinas <seba.salinas.delrio@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flask_ckeditor"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/SebaSalinass/flask-ckeditor"
"Bug Tracker" = "https://github.com/SebaSalinass/flask-ckeditor/issues"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
